# whisper-voice-assistant-mqtt-module

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
modules/publisher/: main.py
modules/subscriber/: Dockerfile  subscriber.py
modules/subscriber/schemas/: event.py
modules/whisper-voice-assistant/: Dockerfile  main.py  pyproject.toml
